--- a/example/primitives/Cargo.toml
+++ b/example/primitives/Cargo.toml
@@ -8,9 +8,11 @@ edition = "2021"
 [dependencies]
 serde = { version = "1.0.119", optional = true }
 codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
-scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
+scale-info = { version = "2.1.2", default-features = false, features = [
+  "derive",
+] }
 
-sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37",default-features = false }
+sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
 sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
 
 zenlink-protocol = { path = "../../zenlink-protocol", default-features = false }
@@ -19,12 +21,12 @@ zenlink-protocol = { path = "../../zenlink-protocol", default-features = false }
 [features]
 default = ["std"]
 std = [
-	"serde",
-	"codec/std",
-	"scale-info/std",
-	"sp-runtime/std",
-	"sp-std/std",
-	"zenlink-protocol/std"
+  "serde",
+  "codec/std",
+  "scale-info/std",
+  "sp-runtime/std",
+  "sp-std/std",
+  "zenlink-protocol/std",
 ]
 
 runtime-benchmarks = []
