--- a/zenlink-protocol/Cargo.toml
+++ b/zenlink-protocol/Cargo.toml
@@ -13,7 +13,9 @@ log = { version = "0.4.14", default-features = false }
 serde = { version = "1.0.119", optional = true }
 # alias "parity-scale-code" to "codec"
 codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
-scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
+scale-info = { version = "2.1.1", default-features = false, features = [
+  "derive",
+] }
 
 # Substrate
 frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.37" }
@@ -36,22 +38,20 @@ orml-tokens = { git = "https://github.com/manta-network/open-runtime-module-libr
 [features]
 default = ["std"]
 std = [
-    "log/std",
-    "serde",
-    "codec/std",
-    "scale-info/std",
-    "sp-core/std",
-    "frame-support/std",
-    "frame-system/std",
-    "sp-runtime/std",
-    "sp-std/std",
-    "sp-arithmetic/std",
-    "pallet-balances/std",
+  "log/std",
+  "serde",
+  "codec/std",
+  "scale-info/std",
+  "sp-core/std",
+  "frame-support/std",
+  "frame-system/std",
+  "sp-runtime/std",
+  "sp-std/std",
+  "sp-arithmetic/std",
+  "pallet-balances/std",
 
-    "orml-traits/std",
+  "orml-traits/std",
 ]
 
-runtime-benchmarks = [
-    "frame-benchmarking",
-]
-try-runtime = [ "frame-support/try-runtime" ]
+runtime-benchmarks = ["frame-benchmarking"]
+try-runtime = ["frame-support/try-runtime"]
