--- a/zenlink-stable-amm/Cargo.toml
+++ b/zenlink-stable-amm/Cargo.toml
@@ -8,7 +8,9 @@ license = "Apache 2.0"
 [dependencies]
 serde = { version = "1.0.119", optional = true }
 codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
-scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
+scale-info = { version = "2.1.1", default-features = false, features = [
+  "derive",
+] }
 
 frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.37" }
 sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
@@ -25,24 +27,22 @@ orml-tokens = { git = "https://github.com/manta-network/open-runtime-module-libr
 pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
 sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
 sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
-pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
+pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
 
 [features]
 default = ["std"]
 std = [
-    "serde",
-    "codec/std",
-    "scale-info/std",
-    "sp-core/std",
-    "frame-support/std",
-    "frame-system/std",
-    "sp-runtime/std",
-    "sp-std/std",
-    "sp-arithmetic/std",
-    "orml-tokens/std",
+  "serde",
+  "codec/std",
+  "scale-info/std",
+  "sp-core/std",
+  "frame-support/std",
+  "frame-system/std",
+  "sp-runtime/std",
+  "sp-std/std",
+  "sp-arithmetic/std",
+  "orml-tokens/std",
 ]
 
-runtime-benchmarks = [
-    "frame-benchmarking",
-]
-try-runtime = [ "frame-support/try-runtime" ]
+runtime-benchmarks = ["frame-benchmarking"]
+try-runtime = ["frame-support/try-runtime"]
