--- a/zenlink-stable-amm/rpc/runtime-api/Cargo.toml
+++ b/zenlink-stable-amm/rpc/runtime-api/Cargo.toml
@@ -4,7 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
+codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
+  "derive",
+] }
 sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
 sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
 
@@ -12,9 +14,4 @@ zenlink-stable-amm = { path = '../..', default-features = false }
 
 [features]
 default = ["std"]
-std = [
-    "codec/std",
-    "sp-api/std",
-    'sp-std/std',
-    "zenlink-stable-amm/std",
-]
+std = ["codec/std", "sp-api/std", 'sp-std/std', "zenlink-stable-amm/std"]
