--- a/zenlink-swap-router/Cargo.toml
+++ b/zenlink-swap-router/Cargo.toml
@@ -11,19 +11,21 @@ targets = ['x86_64-unknown-linux-gnu']
 [dependencies]
 serde = { version = "1.0.119", optional = true }
 codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
-scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
+scale-info = { version = "2.1.1", default-features = false, features = [
+  "derive",
+] }
 
 sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
 sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
-sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37"}
-sp-arithmetic = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37"}
+sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
+sp-arithmetic = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
 
 frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
 frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
 frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.37" }
 
-zenlink-protocol = {package = "zenlink-protocol", path = "../zenlink-protocol", version = "0.4.4", default-features = false}
-zenlink-stable-amm = {package = "zenlink-stable-amm", path = "../zenlink-stable-amm",version = "0.1.0", default-features = false}
+zenlink-protocol = { package = "zenlink-protocol", path = "../zenlink-protocol", version = "0.4.4", default-features = false }
+zenlink-stable-amm = { package = "zenlink-stable-amm", path = "../zenlink-stable-amm", version = "0.1.0", default-features = false }
 orml-traits = { git = "https://github.com/manta-network/open-runtime-module-library", branch = "polkadot-v0.9.37", default-features = false }
 
 [dev-dependencies]
@@ -32,25 +34,23 @@ orml-tokens = { git = "https://github.com/manta-network/open-runtime-module-libr
 pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
 sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
 sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
-pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
+pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
 
 [features]
 default = ["std"]
 std = [
-    "serde",
-    "codec/std",
-    "scale-info/std",
-    "sp-core/std",
-    "frame-support/std",
-    "frame-system/std",
-    "sp-runtime/std",
-    "sp-std/std",
-    "sp-arithmetic/std",
-    "zenlink-protocol/std",
-    "zenlink-stable-amm/std"
+  "serde",
+  "codec/std",
+  "scale-info/std",
+  "sp-core/std",
+  "frame-support/std",
+  "frame-system/std",
+  "sp-runtime/std",
+  "sp-std/std",
+  "sp-arithmetic/std",
+  "zenlink-protocol/std",
+  "zenlink-stable-amm/std",
 ]
 
-runtime-benchmarks = [
-    "frame-benchmarking",
-]
-try-runtime = [ "frame-support/try-runtime" ]
+runtime-benchmarks = ["frame-benchmarking"]
+try-runtime = ["frame-support/try-runtime"]
