--- a/zenlink-protocol/Cargo.toml
+++ b/zenlink-protocol/Cargo.toml
@@ -61,9 +61,12 @@ std = [
 
     "orml-traits/std",
     "orml-tokens/std",
+    "frame-benchmarking/std",
 ]
 
 runtime-benchmarks = [
-    "frame-benchmarking",
+    "frame-support/runtime-benchmarks",
+	"frame-system/runtime-benchmarks",
+    "frame-benchmarking/runtime-benchmarks",
 ]
 try-runtime = [ "frame-support/try-runtime" ]
