--- a/zenlink-stable-amm/Cargo.toml
+++ b/zenlink-stable-amm/Cargo.toml
@@ -40,9 +40,10 @@ std = [
     "sp-std/std",
     "sp-arithmetic/std",
     "orml-tokens/std",
+    "frame-benchmarking/std",
 ]
 
 runtime-benchmarks = [
-    "frame-benchmarking",
+    "frame-benchmarking/runtime-benchmarks",
 ]
 try-runtime = [ "frame-support/try-runtime" ]
