--- a/zenlink-vault/Cargo.toml
+++ b/zenlink-vault/Cargo.toml
@@ -40,10 +40,11 @@ std = [
     "sp-runtime/std",
     "sp-std/std",
     "sp-arithmetic/std",
-    "orml-tokens/std"
+    "orml-tokens/std",
+    "frame-benchmarking/std",
 ]
 
 runtime-benchmarks = [
-    "frame-benchmarking",
+    "frame-benchmarking/runtime-benchmarks",
 ]
 try-runtime = [ "frame-support/try-runtime" ]
