--- a/zenlink-protocol/Cargo.toml
+++ b/zenlink-protocol/Cargo.toml
@@ -10,7 +10,7 @@ targets = ['x86_64-unknown-linux-gnu']
 
 [dependencies]
 log = { version = "0.4.14", default-features = false }
-serde = { version = "1.0.119", optional = true }
+serde = { version = "1.0.163", default-features = false, features = ["derive", "alloc"], optional = true }
 # alias "parity-scale-code" to "codec"
 codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
 scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
@@ -68,5 +68,6 @@ runtime-benchmarks = [
     "frame-support/runtime-benchmarks",
 	"frame-system/runtime-benchmarks",
     "frame-benchmarking/runtime-benchmarks",
+    "sp-runtime/runtime-benchmarks",
 ]
 try-runtime = [ "frame-support/try-runtime" ]
