--- a/zenlink-protocol/rpc/Cargo.toml
+++ b/zenlink-protocol/rpc/Cargo.toml
@@ -10,19 +10,17 @@ targets = ['x86_64-unknown-linux-gnu']
 
 # alias "parity-scale-code" to "codec"
 [dependencies]
-serde = { version = "1.0.119", features = ["derive"], optional = true }
-codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false }
+serde = { workspace = true, optional = true }
+codec = { workspace = true }
 
-jsonrpsee = { version = "0.16.2", features = ["server", "macros"] }
+jsonrpsee = { workspace = true }
 
 # Substrate packages
-
-sp-blockchain = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
-sp-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
-sp-rpc = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
-sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
+sp-blockchain = { workspace = true }
+sp-api = { workspace = true }
+sp-rpc = { workspace = true }
+sp-runtime = { workspace = true }
 
 # Local packages
-
-zenlink-protocol = { path = "..", version = "0.4.0"}
-zenlink-protocol-runtime-api = { path = "./runtime-api", version = "0.4.0"}
+zenlink-protocol = { path = ".." }
+zenlink-protocol-runtime-api = { path = "./runtime-api" }
