--- a/zenlink-protocol/rpc/runtime-api/Cargo.toml
+++ b/zenlink-protocol/rpc/runtime-api/Cargo.toml
@@ -7,15 +7,15 @@ license = "Apache 2.0"
 
 [dependencies]
 # alias "parity-scale-code" to "codec"
-codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false }
+codec = { workspace = true }
 
-sp-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
-sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
+sp-api = { workspace = true }
+sp-std = { workspace = true }
 
 zenlink-protocol = { path = '../..', default-features = false }
 
 [dev-dependencies]
-serde_json = "1.0"
+serde_json = { workspace = true }
 
 [features]
 default = ["std"]
