--- a/zenlink-protocol/Cargo.toml
+++ b/zenlink-protocol/Cargo.toml
@@ -10,7 +10,7 @@ targets = ['x86_64-unknown-linux-gnu']
 
 [dependencies]
 log = { workspace = true }
-serde = { workspace = true, optional = true }
+serde = { workspace = true }
 # alias "parity-scale-code" to "codec"
 codec = { workspace = true }
 scale-info = { workspace = true }
@@ -44,7 +44,7 @@ sp-io = { workspace = true }
 default = ["std"]
 std = [
     "log/std",
-    "serde",
+    "serde/std",
     "codec/std",
     "scale-info/std",
     "sp-core/std",
